--- a/faq.html
+++ b/faq.html
@@ -60,7 +60,11 @@
 				<h1>Domande Frequenti</h1>
 				<div class="domanda">
 					<h2>Cos'è Fulcrum?</h2>
-					<p>Fulcrum è un'associazione culturale con lo scopo di promuovere e sviluppare progetti di artisti e autori emergenti. </p>
+					<p>Fulcrum è un'associazione culturale con lo scopo di promuovere e sviluppare progetti di artisti e autori. </p>
+				</div>
+				<div class="domanda">
+					<h2>Come lavorate?</h2>
+					<p>L'associazione nasce per creare una rete di collaborazioni e condividere capacità e <em>know-how</em>. Si prende dirattemente carico dei progetti o mette in contatto le persone con le conoscenze giuste. </p>
 				</div>
 				<div class="domanda">
 				  <h2>Come posso presentarvi un mio progetto?</h2>
@@ -68,11 +72,7 @@
 				</div>
 				<div class="domanda">
 				  <h2>Fate pagare per i vostri servizi?</h2>
-				  <p>Lorem Ipsum</p>
-				</div>
-				<div class="domanda">
-				  <h2>Fate pubblicazioni gratuite o avete solo prodotti su licenza?</h2>
-				  <p>Lorem Ipsum</p>
+				  <p>In base al tipo di progetto e alle richieste fatteci, Fulcrum può semplicemente richiedere una collaborazione ad un altro progetto, ricavare fondi da <em>crowdfunding</em> e/o finanziamenti pubblici, occuparsi della vendita diretta o agire da intermediario fra due individui. </p>
 				</div>
 				<div class="domanda">
 				  <h2>Fate solo editoria o vi occupate di altri campi?</h2>
@@ -80,7 +80,7 @@
 				</div>
 				<div class="domanda">
 				  <h2>Producete anche per l’estero e in altre lingue?</h2>
-				  <p>Siamo in grado di produrre e distribuire in Inglese e Francese e abbiamo contatti con la distribuzione europea.</p>
+				  <p>Siamo in grado di produrre e distribuire in Inglese e Francese e stiamo prendendo contatti con la distribuzione europea.</p>
 				</div>
 				<div class="domanda">
 				  <h2>Accettate fumetti?</h2>
