--- a/progetti.html
+++ b/progetti.html
@@ -55,25 +55,34 @@
 <!-- InstanceEndEditable -->
 	<div class="container">
 		<!-- InstanceBeginEditable name="content" -->
+		<h1>I Nostri Progetti:</h1>
 		<section class="progetti">
 			<article>
-				<a href="progetti/guida.html"><img class="immaginiprogetti" src="images/guida/guida250x125.jpg" alt=""></a>					
+				<a href="progetti/guida.html"><img class="immaginiprogetti" src="images/banners/Guida250x125.jpg" alt=""></a>					
 				<div class="testoprogetti">
 				  	<h2>Guida Alla Frontiera Galattica</h2>
 				  	<p>Preparatevi a saltare fra una stella e l'altra a bordo dell'astronave Onyx, nel suo viaggio di ritorno dalla frontiera della Galassia, combattendo i nemici dell'Impero ed esplorando pianeti sconosciuti e meravigliosi. Intrighi politici, alieni riottosi e pericoli sempre incombenti sono il sale del primo gioco di ruolo edito da Fulcrum e completamente illustrato da Luca Oleastri. Sarete in grado di riportare l'equipaggio a casa?</p>
 				</div>
 			</article> 
 			<article>
-				<a href="progetti/oca.html"><img class="immaginiprogetti" src="images/progetti/bergaminip.jpg" alt=""></a>
+				<a href="progetti/oca.html"><img class="immaginiprogetti" src="images/banners/Oca250x125.jpg" alt=""></a>
 				<div class="testoprogetti">
 					<h2>Gioco dell'Oca Illustrato</h2>
-				  	<p>Un gioco della tradizione in chiave mistica. Le illustrazioni dell'artista di fama nazionale Anna Bergamini danno vita a uno dei prodotti ludici più classici, con un'impronta mistica e spirituale</p>
-			  </div>
+					<p>Un gioco della tradizione in chiave mistica. Le illustrazioni dell'artista di fama nazionale Anna Bergamini danno vita a uno dei prodotti ludici più classici, con un'impronta mistica e spirituale. L'arte si unisce al gioco nel primo prodotto della linea Giochi d'Artista.</p>
+				</div>
 			</article> 
 			<article>
-				<img class="immaginiprogetti" src="images/progetti/aqp.jpg" alt="">
+				<a href="progetti/rune.html"><img class="immaginiprogetti" src="images/banners/Rune250x125.jpg" alt=""></a>
 				<div class="testoprogetti">
-				  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h2>Rune</h2>
+				  	<p>Edizioni Scudo riporta in vita la famosa rivista sul GDR, Fulcrum è orgogliosa di partecipare a questo progetto, nato da giocatori per giocatori.  </p>
+				</div>
+			</article> 
+			<article>
+				<a href="progetti/Tales.html"><img class="immaginiprogetti" src="images/banners/Tales250x125b.jpg" alt=""></a>
+			  <div class="testoprogetti">
+				<h2>Tales of Blades and Heroes GDR</h2>
+				<p>Fulcrum porta in Italia il GDR di Andrea Sfligoi di Ganesha Games, basato sul conosciutissimo gioco di miniature Song of Blades and Heroes. Meccaniche semplici ma innovative si amalgamano in una ventata di Vecchia Scuola tutta italiana! </p>
 			  </div>
 			</article> 
 		</section>		
