--- a/progetti/Tales.html
+++ b/progetti/Tales.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Fulcrum Associazione Culturale - Guida</title>
+<title>Fulcrum Associazione Culturale - Tales of Blades and Heroes</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->	
 <!-- InstanceEndEditable -->
@@ -35,7 +35,7 @@
 	</div>
 	
 	<div class="topbar">
-		<div class="logowrap"><img class="upperlogo" src="../images/logo%20350x125.jpg" alt=""></div> 
+		<div class="logowrap"><img class="upperlogo" src="../images/logo 350x125.jpg" alt=""></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
@@ -58,21 +58,20 @@
 		
 		<section class="project">
 			<!-- InstanceBeginEditable name="banner" -->
-            <div class="imgcontent"><img src="../images/banners/Guida1100x300.jpg" alt=""></div>	
+            <div class="imgcontent"><img src="/images/banners/Tales1100x300.jpg" alt=""></div>	
 			<!-- InstanceEndEditable -->
 		  	<div class="projectbox">
 		  		<div class="contentbox">
 		  	    	<h1 class="title">
 		  	      	<!-- InstanceBeginEditable name="title" -->
-		  	        	Guida alla Frontiera Galattica - Gioco di Ruolo
+		  	        	Tales of Blades and Heroes - Gioco di Ruolo
 	  	          	<!-- InstanceEndEditable -->
 		  	      	</h1>
 		  	    	<!-- InstanceBeginEditable name="content" -->
-		  	    	<p class="content"> Basato sul libro "Tourist's Guide to the Galactic Frontier" scritto dal romanziere Giorgio Sangiorgi e illustrato dall'artista Luca Oleastri, Fulcrum produrrà, in colaborazione con Edizioni Scudo, il Gioco di Ruolo di Guida alla Frontiera Galattica. Dotato di una meccanica esclusiva, ideata da Mirko Pellicioni, il gioco è un'immersione nel mondo immaginato da Sangiorgi: più di 40 mondi alieni situati alla perfieria della Via Lattea attendono i giocatori. Ogni pianeta sarà descritto nel dettaglio, con una mappa delle aree di interesse e tavole a colori che illustrano le peculiarità di ogni luogo. <br>
-	  	    	    </p>
-		  	    	<p class="content">Il manuale suggerisce una trama di partenza: Interpretare l'equipaggio della nave spaziale Onyx dell'Impero Hakmlet, bloccata alla Frontiera Galattica durante una missione esplorativa e costretta a cercare una rotta inedita verso casa. Con il materiale proposto potrete, inoltre, giocare altri scenari, come il punto di vista degli alieni, nemici dell'Impero. Al sistema di gioco dedicato, affiancheremo anche i dettagli per adattare l'ambientazione ad altri importanti sistemi di gioco. <br>
-	  	    	    </p>
-		  	    	<p class="content">Il progetto è in fase avanzata di sviluppo, con il Kickstarter in arrivo per il primo quadrimestre del 2019. In antemprima abbiamo messo un po' di materiale prelevato direttamente dal manuale. E' prevista una pubblicazione in lingua italiana e una in lingua inglese. L'uscita è prevista per il primo quadrimestre del 2020.</p>
+		  	    	<p class="content"> Come primo progetto di localizzazione di Fulcrum, siamo deliziati di poter portare in Italia un gioco di un autore italiano, Andrea Sfiligoi, fondatore di Ganesha Games. Tales of Blades and Heroes è un sistema di regole leggere ed immediate&nbsp;basato sul famoso gioco di combattimento con miniature, sempre prodotto da Ganesha, Song of Blades and Heroes. </p>
+		  	    	<p class="content">Il manuale offre tutto quello che è necessario per giocare, in 180 pagine formato tascabile o cartonato di lusso. Per la versione italiana verranno realizzati una nuova veste grafica e nuovi disegni.</p>
+		  	    	<p class="content">L'ambientazione proposta da Tales ammicca ai giochi della scuola di vecchio stampo, come le prime edizioni di Dungeons and Dragons. Il sistema utilizza, per le azioni mondane, un numero ridotto di statistiche e si basa sul D6, la magia, invece utilizza una è strutturata su Verbi e Nomi, concedendo ai giocatori una libertà incredibile sulla creazione di incantesimi.</p>
+		  	    	<p class="content"> La presentazione di Tales of Blades and Heroes GDR avverrà a Modena Play 2019. </p>
 		  	    	<!-- InstanceEndEditable -->
 		  	    </div>
 				<div class="sidebar">
@@ -84,10 +83,11 @@
 						<div class="newstop">
 						  <time class="newsdate">01/01/2019</time>
 						  <h3>Project Title</h3>
-					    </div>                        
-						<img src="../images/banners/Guida250x125.jpg">						
-						<h4>News Title</h4>
-					    <p>Lorem ipsum</p>
+					    </div>
+                        <div>
+							<img src="../images/315x150.png"></div>
+							<h4>News Title</h4>
+					    	<p>Lorem ipsum</p>
 						<!-- InstanceEndEditable -->
 					</section>
 				</div>
