--- a/progetti/oca.html
+++ b/progetti/oca.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Fulcrum Associazione Culturale - ProjectTemplate</title>
+<title>Fulcrum Associazione Culturale - Gioco dell'Oca</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->	
 <!-- InstanceEndEditable -->
@@ -58,20 +58,25 @@
 		
 		<section class="project">
 			<!-- InstanceBeginEditable name="banner" -->
-            <div class="imgcontent"><img src="../images/1100x300.png" alt=""></div>	
+            <div class="imgcontent"><img src="../images/banners/Oca1100x300.jpg" alt=""></div>	
 			<!-- InstanceEndEditable -->
 		  	<div class="projectbox">
 		  		<div class="contentbox">
 		  	    	<h1 class="title">
 		  	      	<!-- InstanceBeginEditable name="title" -->
-		  	        	Titolo
+		  	        	Gioco dell'Oca dell'artista Anna Bergamini
 	  	          	<!-- InstanceEndEditable -->
 		  	      	</h1>
 		  	    	<!-- InstanceBeginEditable name="content" -->
-		  	      
-		  	        <p class="content"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-	  	        	</p>
-	  	        	<!-- InstanceEndEditable -->
+		  	    	<p class="content"> Fulcrum presenta una Linea di “Giochi d’Artista”. </p>
+		  	    	<p class="content">Frutto dell’esperienza maturata dai suoi membri, Fulcrum propone una serie di eccentriche contaminazioni di genere, tra arte e mondo ludico; in questi prodotti gli elementi tipici del gioco si confrontano con la verve creativa di pittori, incisori, illustratori…<br>
+		  	    	  Da quest’amalgama scaturiscono produzioni che risultano essere non solo giochi od opere d’arte, ma intriganti opere di design, che possono venire utilizzate o semplicemente rimirate. </p>
+		  	    	<p class="content">Il primo progetto di questa linea “Giochi d’Artista” è il Gioco dell’Oca, prodotto in collaborazione con l’artista Anna Bergamini.</p>
+		  	    	<p class="content">Il Gioco Dell’Oca nasce come tipico gioco da tavolo che viene storicamente rappresentato da un tabellone a spirale dove i giocatori devono raggiungere il centro superando alcune caselle problematiche.
+		  	    	  La versione proposta dall’artista Anna Bergamini si compone di un tabellone dinamico realizzato con tessere che si rimescolano e si dispongono su una plancia vuota. Come in un percorso labirintico, i giocatori vengono guidati e ispirati da storie, aneddoti e facezie* dal sapore antico che l’artista ferrarese ci propone in ogni tessera, grazie alla sua magnifica fantasia visiva.</p>
+		  	    	<p class="content">I giocatori affronteranno labirinti sempre diversi, immergendosi nel mondo fantastico che il gioco propone. Ogni tessera sarà costituita da una descrizione, un breve racconto e una suggestione artistica che spingeranno il giocatore avanti nella sequenza. </p>		  	    	
+		  	    	<p class="content">*La facezia è un genere letterario della tradizione romanza, collegato alla novella, in cui vengono inseririti fatti e personaggi in situazioni curiose e paradossali e, spesso, lo spirito e l’arguzia vengono usati per risolvere le circostanze.</p>
+		  	    	<!-- InstanceEndEditable -->
 		  	    </div>
 				<div class="sidebar">
                   	<div class="flag">
