--- a/progetti/rune.html
+++ b/progetti/rune.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Fulcrum Associazione Culturale - ProjectTemplate</title>
+<title>Fulcrum Associazione Culturale - Rune</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->	
 <!-- InstanceEndEditable -->
@@ -58,20 +58,20 @@
 		
 		<section class="project">
 			<!-- InstanceBeginEditable name="banner" -->
-            <div class="imgcontent"><img src="../images/slider/slide3.jpg" alt=""></div>	
+            <div class="imgcontent"><img src="../images/banners/Rune1100x300.jpg" alt=""></div>	
 			<!-- InstanceEndEditable -->
 		  	<div class="projectbox">
 		  		<div class="contentbox">
 		  	    	<h1 class="title">
 		  	      	<!-- InstanceBeginEditable name="title" -->
-		  	        	Titolo
+		  	        	Rune
 	  	          	<!-- InstanceEndEditable -->
 		  	      	</h1>
 		  	    	<!-- InstanceBeginEditable name="content" -->
-		  	      
-		  	        <p class="content"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-	  	        	</p>
-	  	        	<!-- InstanceEndEditable -->
+		  	    	<p class="content"> Rune è una rivista scritta da giocatori per giocatori, redatta da Edizioni Scudo in collaborazione con Fulcrum e due dei fondatori della prestigiosa testata originale, Ciro Alessandro Sacco, che ne fu Direttore Grafico e Danilo Moretti, che ne fu Direttore Editoriale. Rune si imposta principalmente come rivista di contenuti per giocatori di ruolo, riprendendo il "grande formato" editoriale, verrà distribuita sia in versione Print-On-Demand a colori brossurata, sia in versione e-book. </p>
+		  	    	<p class="content">Si è pensato che, essendo recensioni e altro materiale dimostrativo largamente disponibile, sia in altre pubblicazioni, sia online, Rune debba concentrarsi, per quanto riguarda gli articoli di approfondimento, su un punto di vista di "laterale", ossia sulla storia del GDR e dei suoi corollari e su articoli scritti direttamente dagli autori dei giochi. Il vero punto di forza di Rune, invece, saranno i materiali di gioco, che comporranno una parte consistente dei contenuti della rivista: avventure, spunti di gioco, ambientazioni ecc... saranno il sale delle pubblicazioni. </p>
+		  	    	<p class="content">Il numero 0 di Rune è previsto per Modena Play 2019.</p>
+		  	    	<!-- InstanceEndEditable -->
 		  	    </div>
 				<div class="sidebar">
                   	<div class="flag">
