--- a/about.html
+++ b/about.html
@@ -85,14 +85,14 @@
 			    <h3> Paola Giari </h3>
 			    <p>Illustratrice</p>
 			  </div>
-		  <img src="images/foto/Paola.jpg" alt="">
+		  <img src="images/foto/paola.jpg" alt="">
 		</div>
 		  <div class="sheet"> 				
 			  	<div class="aboutcontentleft">
 			    	<h3> Luca Oleastri </h3>
 			    	<p> Illustratore</p>
 			  	</div>			
-				<img src="images/foto/Luca.jpg" alt="">
+				<img src="images/foto/luca.jpg" alt="">
 		  	</div>
 			
 		  <div class="sheet"> 
