--- a/progetti.html
+++ b/progetti.html
@@ -79,7 +79,7 @@
 				</div>
 			</article> 
 			<article>
-				<a href="progetti/Tales.html"><img class="immaginiprogetti" src="images/banners/Tales250x125b.jpg" alt=""></a>
+				<a href="progetti/tales.html"><img class="immaginiprogetti" src="images/tales/tales250x125.jpg" alt=""></a>
 			  <div class="testoprogetti">
 				<h2>Tales of Blades and Heroes GDR</h2>
 				<p>Fulcrum porta in Italia il GDR di Andrea Sfligoi di Ganesha Games, basato sul conosciutissimo gioco di miniature Song of Blades and Heroes. Meccaniche semplici ma innovative si amalgamano in una ventata di Vecchia Scuola tutta italiana! </p>
