--- a/progetti/Tales.html
+++ b/progetti/Tales.html
@@ -35,7 +35,7 @@
 	</div>
 	
 	<div class="topbar">
-		<div class="logowrap"><img class="upperlogo" src="../images/logo 350x125.jpg" alt=""></div> 
+		<div class="logowrap"><img class="upperlogo" src="../images/logo%20350x125.jpg" alt=""></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
@@ -58,7 +58,7 @@
 		
 		<section class="project">
 			<!-- InstanceBeginEditable name="banner" -->
-            <div class="imgcontent"><img src="/images/banners/Tales1100x300.jpg" alt=""></div>	
+            <div class="projbannerbig"><img src="/images/tales/tales1100x300.jpg" alt=""></div>	
 			<!-- InstanceEndEditable -->
 		  	<div class="projectbox">
 		  		<div class="contentbox">
@@ -68,9 +68,12 @@
 	  	          	<!-- InstanceEndEditable -->
 		  	      	</h1>
 		  	    	<!-- InstanceBeginEditable name="content" -->
-		  	    	<p class="content"> Come primo progetto di localizzazione di Fulcrum, siamo deliziati di poter portare in Italia un gioco di un autore italiano, Andrea Sfiligoi, fondatore di Ganesha Games. Tales of Blades and Heroes è un sistema di regole leggere ed immediate&nbsp;basato sul famoso gioco di combattimento con miniature, sempre prodotto da Ganesha, Song of Blades and Heroes. </p>
+		  	    	<p class="content"> Come primo progetto di localizzazione di Fulcrum, siamo deliziati di poter portare in Italia un gioco di un autore italiano, Andrea Sfiligoi, fondatore di Ganesha Games. Tales of Blades and Heroes è un sistema di regole leggere ed immediate, basato sul famoso gioco di combattimento con miniature, sempre prodotto da Ganesha, Song of Blades and Heroes. </p>
+					<div class="imgflow"><img src="../images/tales/taleswar.jpg" alt=""><p class="content">Il manuale offre tutto quello che è necessario per giocare, in 180 pagine formato tascabile o cartonato di lusso. Per la versione italiana verranno realizzati una nuova veste grafica e nuovi disegni.</p></div>
 		  	    	<p class="content">Il manuale offre tutto quello che è necessario per giocare, in 180 pagine formato tascabile o cartonato di lusso. Per la versione italiana verranno realizzati una nuova veste grafica e nuovi disegni.</p>
-		  	    	<p class="content">L'ambientazione proposta da Tales ammicca ai giochi della scuola di vecchio stampo, come le prime edizioni di Dungeons and Dragons. Il sistema utilizza, per le azioni mondane, un numero ridotto di statistiche e si basa sul D6, la magia, invece utilizza una è strutturata su Verbi e Nomi, concedendo ai giocatori una libertà incredibile sulla creazione di incantesimi.</p>
+		  	    	<div class="imgflow">
+		  	    	  <p class="content">L'ambientazione proposta da Tales ammicca ai giochi della scuola di vecchio stampo, come le prime edizioni di Dungeons and Dragons. Il sistema utilizza, per le azioni mondane, un numero ridotto di statistiche e si basa sul D6, la magia, invece utilizza una è strutturata su Verbi e Nomi, concedendo ai giocatori una libertà &nbsp;sulla creazione dei loro incantesimi.</p>
+	  	    	    <img src="../images/tales/sparks.jpg" alt=""></div>
 		  	    	<p class="content"> La presentazione di Tales of Blades and Heroes GDR avverrà a Modena Play 2019. </p>
 		  	    	<!-- InstanceEndEditable -->
 		  	    </div>
