--- a/progetti/ammo2.html
+++ b/progetti/ammo2.html
@@ -58,7 +58,7 @@
 		
 		<section class="project">
 			<!-- InstanceBeginEditable name="banner" -->
-            <div class="imgcontent"><img src="../images/1100x300.png" alt=""></div>	
+            <div class="projbannerbig"><img src="../images/1100x300.png" alt=""></div>	
 			<!-- InstanceEndEditable -->
 		  	<div class="projectbox">
 		  		<div class="contentbox">
