--- a/progetti/oca.html
+++ b/progetti/oca.html
@@ -58,7 +58,7 @@
 		
 		<section class="project">
 			<!-- InstanceBeginEditable name="banner" -->
-            <div class="imgcontent"><img src="../images/banners/Oca1100x300.jpg" alt=""></div>	
+            <div class="projbannerbig"><img src="../images/banners/Oca1100x300.jpg" alt=""></div>	
 			<!-- InstanceEndEditable -->
 		  	<div class="projectbox">
 		  		<div class="contentbox">
