--- a/servizi.html
+++ b/servizi.html
@@ -59,12 +59,18 @@
 			<div>
 				<h1>L'Associazione Culturale Fulcrum ruota attorno ai suoi servizi.</h1>				
 				<div class="servizio">
-					<h2>Servizio 1:</h2>
-					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>					
+					<h2>Consulenza:</h2>
+					<p>Fulcrum mette a disposizione il<em> know-how</em> dei propri membri per identificare il valore manifesto e il valore potenziale dei progetti proposti. Ogni progetto proposto a Fulcrum viene valutato e, nel caso abbia uno scopo commerciale, gli viene attribuito un posizionamento di mercato. Se l'autore dovesse richiederlo, si possono poi proporre e accordare modifiche al progetto.&nbsp;</p>
 				</div>
 				<div class="servizio">
-					<h2>Servizio 2:</h2>
-					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>					
+				  <h2>Ricerca di Fondi:</h2>
+				  <p>Come Associazione Culturale, Fulcrum ha la possibilità di accedere a fondi di origine pubblica destinati ad attività artistiche e associazioni culturali. Il metodo principale, invece, per recuperare fondi per singoli progetti, sarà il <em>crowdfunding </em>attraverso la rete, ossia l'avvalersi di tutte quelle nuove piattaforme che permettono a un progetto di finanziarsi attraverso il sostegno di singoli privati, che, per un motivo o per quell'altro, credono nella realizzazione del progetto.</p>
+				  <h2>Produzione:</h2>
+				  <p>Fulcrum può produrre materiale edioriale e/o artistico, assistendo l'autore in tutte le fasi della produzione: impostazione di prodotto, design, realizzazione grafica, impaginazione e packaging. </p>
+				  <h2>Distribuzione:</h2>
+				  <p>Abbiamo la possibilità di distribuire attraverso canali interni ed esterni in Italia e attraverso canali esterni in Europa. I nostri collaboratori hanno canali importanti per quanto riguarda il settore ludico e quello editoriale e stiamo sviluppando una rete di collaborazioni nel campo dell'arte in grado di supportare il lavoro propostoci.</p>
+				  <h2>Connettività:</h2>
+				  <p>Fulcrum nasce come associazione culturale per creare una rete di connessioni fra individui con competenze differenti, in grado di fare fronte alle esigenze progettuali che mano a mano ci vengono proposte. L'altro aspetto che viene esaltato da una rete di connessioni di questo tipo è la capacità di fare fluire rapidamente informazioni sui progetti ad altri individui potenzialmente interessati.</p>
 				</div>
 			</div>
 		</section>
